--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -5,36 +5,28 @@
     <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_category.tooltip') %>"></i>
   </div>
 
-  <div class="mb-1">
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="category" id="category-friends" value="friends" checked>
-      <label class="form-check-label" for="category-friends">
-        <%= t('.search_category.friends.label') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="category" id="category-followers" value="followers">
-      <label class="form-check-label" for="category-followers">
-        <%= t('.search_category.followers.label') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="category" id="category-one_sided_friends" value="one_sided_friends">
-      <label class="form-check-label" for="category-one_sided_friends">
-        <%= t('.search_category.one_sided_friends.label') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="category" id="category-one_sided_followers" value="one_sided_followers">
-      <label class="form-check-label" for="category-one_sided_followers">
-        <%= t('.search_category.one_sided_followers.label') %>
-      </label>
-    </div>
-    <div class="form-check">
-      <input class="form-check-input" type="radio" name="category" id="category-mutual_friends" value="mutual_friends">
-      <label class="form-check-label" for="category-mutual_friends">
-        <%= t('.search_category.mutual_friends.label') %>
-      </label>
+  <div class="container">
+    <div class="row mb-1">
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="category" id="category-friends" value="friends" data-label="<%= t('.search_category.friends') %>" checked>
+        <label class="form-check-label" for="category-friends" style="white-space: nowrap;"><%= t('.search_category.friends') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="category" id="category-followers" value="followers" data-label="<%= t('.search_category.followers') %>">
+        <label class="form-check-label" for="category-followers" style="white-space: nowrap;"><%= t('.search_category.followers') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="category" id="category-one_sided_friends" value="one_sided_friends" data-label="<%= t('.search_category.one_sided_friends') %>">
+        <label class="form-check-label" for="category-one_sided_friends" style="white-space: nowrap;"><%= t('.search_category.one_sided_friends') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="category" id="category-one_sided_followers" value="one_sided_followers" data-label="<%= t('.search_category.one_sided_followers') %>">
+        <label class="form-check-label" for="category-one_sided_followers" style="white-space: nowrap;"><%= t('.search_category.one_sided_followers') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check">
+        <input class="form-check-input" type="radio" name="category" id="category-mutual_friends" value="mutual_friends" data-label="<%= t('.search_category.mutual_friends') %>">
+        <label class="form-check-label" for="category-mutual_friends" style="white-space: nowrap;"><%= t('.search_category.mutual_friends') %></label>
+      </div>
     </div>
   </div>
 </div>
@@ -46,30 +38,24 @@
     <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_type.tooltip') %>"></i>
   </div>
 
-  <div class="mb-1">
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="type" id="type-job" value="job" checked>
-      <label class="form-check-label" for="type-job">
-        <%= t('.search_type.job') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="type" id="type-location" value="location">
-      <label class="form-check-label" for="type-location">
-        <%= t('.search_type.location') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="type" id="type-url" value="url">
-      <label class="form-check-label" for="type-url">
-        <%= t('.search_type.url') %>
-      </label>
-    </div>
-    <div class="form-check mb-2">
-      <input class="form-check-input" type="radio" name="type" id="type-keyword" value="keyword">
-      <label class="form-check-label" for="type-keyword">
-        <%= t('.search_type.keyword') %>
-      </label>
+  <div class="container">
+    <div class="row mb-1">
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="type" id="type-job" value="job" data-label="<%= t('.search_type.job') %>" checked>
+        <label class="form-check-label" for="type-job"><%= t('.search_type.job') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="type" id="type-location" value="location" data-label="<%= t('.search_type.location') %>">
+        <label class="form-check-label" for="type-location"><%= t('.search_type.location') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="type" id="type-url" value="url" data-label="<%= t('.search_type.url') %>">
+        <label class="form-check-label" for="type-url"><%= t('.search_type.url') %></label>
+      </div>
+      <div class="col-sm-12 col-md-3 form-check mb-2">
+        <input class="form-check-input" type="radio" name="type" id="type-keyword" value="keyword" data-label="<%= t('.search_type.keyword') %>">
+        <label class="form-check-label" for="type-keyword"><%= t('.search_type.keyword') %></label>
+      </div>
     </div>
   </div>
 </div>
@@ -145,8 +131,7 @@
     }
 
     function setPlaceholder() {
-      var selected = $('#search-type-buttons .btn-primary').text();
-      var value = labelSelector.data('placeholder').replace('{value}', selected);
+      var value = labelSelector.data('placeholder').replace('{value}', currentTypeLabel());
       labelSelector.attr('placeholder', value);
     }
 
@@ -159,8 +144,7 @@
     }
 
     function currentCategoryLabel() {
-      var checked = $("input[name='category']:checked");
-      return $("label[for='" + checked.attr('id') + "']").text();
+      return $("input[name='category']:checked").data('label');
     }
 
     function currentType() {
@@ -168,8 +152,7 @@
     }
 
     function currentTypeLabel() {
-      var checked = $("input[name='type']:checked");
-      return $("label[for='" + checked.attr('id') + "']").text();
+      return $("input[name='type']:checked").data('label');
     }
 
     function currentLabel() {
@@ -298,13 +281,8 @@
       }
     }
 
-    $('#search-category-buttons').on('click', function () {
-      updateSearchLabelOptions();
-    });
-
-    $('#search-type-buttons').on('click', function () {
-      updateSearchLabelOptions();
-    });
+    $("input[name='category']").on('click', updateSearchLabelOptions);
+    $("input[name='type']").on('click', updateSearchLabelOptions);
 
     $('#job-submit').on('click', function () {
       search();
