--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -61,6 +61,9 @@
       </div>
       <div class="dropdown-menu dropdown-menu-right">
         <a class="dropdown-item" href="<%= egotter_url('{{screen_name}}') %>" target="_blank"><%= t('.egotter') %></a>
+        <a class="dropdown-item" href="<%= twitter_url('{{screen_name}}') %>" target="_blank"><%= t('.twitter') %></a>
+        <a class="dropdown-item" href="<%= direct_message_url(current_user.uid, '{{uid}}') %>" target="_blank"><%= t('.direct_message') %></a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.error_report') %></a>
         <a class="dropdown-item" href="#" data-toggle="modal" data-target="#report-modal"><%= t('.bug_report') %></a>
       </div>
