--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -57,11 +57,15 @@
       <div style="display: {{status_display}};">
         <hr>
         <div class="mb-3">
-          <p class="small mb-0">
+          <p class="small mb-1">
             {{status_text}}
+          </p>
+          <div class="small">
             <span class="text-muted">&#8212;</span>
             <a class="text-muted" href="https://twitter.com/{{screen_name}}/status/{{status_id}}" target="_blank">{{status_created_at}}</a>
-          </p>
+            <span class="text-muted ml-3"><i class="fas fa-retweet"></i> {{status_retweet_count}}</span>
+            <span class="text-muted ml-3"><i class="far fa-heart"></i> {{status_favorite_count}}</span>
+          </div>
         </div>
       </div>
     </div>
