Add status_retweet_count_s and status_favorite_count_s

--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -63,8 +63,8 @@
           <div class="small">
             <span class="text-muted">&#8212;</span>
             <a class="text-muted" href="https://twitter.com/{{screen_name}}/status/{{status_id}}" target="_blank">{{status_created_at}}</a>
-            <span class="text-muted ml-3"><i class="fas fa-retweet"></i> {{status_retweet_count}}</span>
-            <span class="text-muted ml-3"><i class="far fa-heart"></i> {{status_favorite_count}}</span>
+            <span class="text-muted ml-3"><i class="fas fa-retweet"></i> {{status_retweet_count_s}}</span>
+            <span class="text-muted ml-3"><i class="far fa-heart"></i> {{status_favorite_count_s}}</span>
           </div>
         </div>
       </div>
