--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -54,20 +54,29 @@
         </div>
       </div>
 
-      <div style="display: {{status_display}};">
-        <hr>
-        <div class="mb-3">
-          <p class="small mb-1">
-            {{status_text}}
-          </p>
-          <div class="small">
-            <span class="text-muted">&#8212;</span>
-            <a class="text-muted" href="https://twitter.com/{{screen_name}}/status/{{status_id}}" target="_blank">{{status_created_at}}</a>
-            <span class="text-muted ml-3"><i class="fas fa-retweet"></i> {{status_retweet_count_s}}</span>
-            <span class="text-muted ml-3"><i class="far fa-heart"></i> {{status_favorite_count_s}}</span>
-          </div>
+      {{#status_display}}
+      <hr>
+      <div class="mb-3">
+        <p class="small mb-1">
+          {{status_text}}
+        </p>
+        {{#status_photos_display}}
+        <div class="mb-1">
+          {{#status_photo_urls}}
+          <a href="{{.}}" target="_blank">
+            <img class="mr-2" data-src="{{.}}" width="200">
+          </a>
+          {{/status_photo_urls}}
+        </div>
+        {{/status_photos_display}}
+        <div class="small">
+          <span class="text-muted">&#8212;</span>
+          <a class="text-muted" href="https://twitter.com/{{screen_name}}/status/{{status_id}}" target="_blank">{{status_created_at}}</a>
+          <span class="text-muted ml-3"><i class="fas fa-retweet"></i> {{status_retweet_count_s}}</span>
+          <span class="text-muted ml-3"><i class="far fa-heart"></i> {{status_favorite_count_s}}</span>
         </div>
       </div>
+      {{/status_display}}
     </div>
 
     <div class="dropdown" style="position: absolute; right: 10px; top: 8px;">
