--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -46,10 +46,22 @@
             <span class="small text-muted"><%= t('.following') %></span>
           </a>
         </div>
-        <div class="d-inline-block">
+        <div class="d-inline-block mr-3">
           <a href="https://twitter.com/{{screen_name}}/followers" target="_blank">
             <strong class="text-body">{{followers_count_s}}</strong>
             <span class="small text-muted"><%= t('.followers') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block mr-3">
+          <a href="https://twitter.com/{{screen_name}}/lists/memberships" target="_blank">
+            <strong class="text-body">{{listed_count_s}}</strong>
+            <span class="small text-muted"><%= t('.lists') %></span>
+          </a>
+        </div>
+        <div class="d-inline-block">
+          <a href="https://twitter.com/{{screen_name}}/likes" target="_blank">
+            <strong class="text-body">{{favourites_count_s}}</strong>
+            <span class="small text-muted"><%= t('.likes') %></span>
           </a>
         </div>
       </div>
