--- a/app/views/waiting/index.html.erb
+++ b/app/views/waiting/index.html.erb
@@ -11,7 +11,7 @@
     <p class="lead"><%= t('.text', user: @user.screen_name) %></p>
   </div>
   <div class="mb-5">
-    <a href="<%= waiting_path(via: 'reload') %>"><%= t('.reload') %></a>
+    <a class="btn btn-primary" href="<%= waiting_path(via: 'reload') %>"><%= t('.reload') %></a>
   </div>
   <div class="progress mb-5">
     <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
