Save is_protected and is_verified

--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -10,6 +10,8 @@
         <div>
           <strong>{{name}}</strong>
           <a class="text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
+          {{{protected_label}}}
+          {{{verified_label}}}
         </div>
         <div>
           <div class="small">{{{labels}}}</div>
