Clean up locations and keywords

--- a/app/views/shared/_profile_section.html.erb
+++ b/app/views/shared/_profile_section.html.erb
@@ -20,7 +20,7 @@
     </div>
 
     <div class="profile-section-details collapse">
-      <div class="small mb-3">{{{description}}}</div>
+      <div class="small mb-3" style="word-break: break-all;">{{{description}}}</div>
       <div class="mb-3">
         <div class="d-inline-block mr-3">
           <i class="fas fa-map-marker-alt text-muted"></i>
@@ -70,7 +70,7 @@
       {{#status_display}}
       <hr>
       <div class="mb-3">
-        <p class="small mb-1">
+        <p class="small mb-1" style="word-break: break-all;">
           {{status_text}}
         </p>
         {{#status_photos_display}}
