--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -71,7 +71,7 @@
       {{#status_display}}
       <hr>
       <div class="mb-3">
-        <p class="small mb-1">
+        <p class="small mb-1" style="word-break: break-all;">
           {{status_text}}
         </p>
         {{#status_photos_display}}
