--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -66,7 +66,7 @@
     <span class="h5"><%= t('.search_label.title') %></span>
     <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.search_label.tooltip') %>"></i>
   </div>
-  <input type="text" id="search-label" class="form-control" list="search-label-options"
+  <input type="text" id="search-label" class="form-control mb-2" list="search-label-options"
          data-placeholder="<%= t('.search_label.placeholder') %>"
          data-placeholder-job="<%= t('.search_label.placeholder_job') %>"
          data-placeholder-location="<%= t('.search_label.placeholder_location') %>"
@@ -75,6 +75,12 @@
          style="min-width: 200px; max-width: 300px;">
   <datalist id="search-label-options">
   </datalist>
+  <div id="quick-select">
+    <span><%= t('.search_label.quick_select') %></span>
+    <a class="badge badge-primary mr-1" href="#">aaa</a>
+    <a class="badge badge-primary mr-1" href="#">bbb</a>
+    <a class="badge badge-primary" href="#">ccc</a>
+  </div>
 </div>
 
 <div class="mb-5">
@@ -293,6 +299,17 @@
       }, 1000)
     }
 
+    function setQuickSelect(options) {
+      $('#quick-select a').text('');
+      options.forEach(function (option, i) {
+        var btn = $('#quick-select a:eq(' + i + ')');
+        btn.text(option.label).on('click', function () {
+          labelSelector.val(option.value);
+          return false;
+        });
+      });
+    }
+
     function fetchLabelOptions() {
       var url = '<%= raw api_label_options_path %>';
       var category = currentCategory();
@@ -300,6 +317,7 @@
 
       $.get(url, {category: category, type: type}).done(function (res) {
         setOptions(res.options);
+        setQuickSelect(res.quick_select);
       });
     }
 
