--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -111,220 +111,14 @@
 
 <script>
   $(function () {
-    var labelSelector = $('#search-label');
-    var lastUid;
-    var currentIndexNumber;
     var i18n = {
       specify_correct_label: '<%= t('.js.specify_correct_label') %>',
       no_results_found: '<%= t('.js.no_results_found_html', app: t('app_name')) %>'
     };
-
-    function resetSearchState(reason) {
-      console.log('Reset search state:', reason);
-      $('.search-response-title').hide();
-      $('#search-response').empty();
-      labelSelector.removeClass('is-invalid').removeClass('is-valid');
-      lastUid = null;
-      currentIndexNumber = 1;
-    }
-
-    function switchCategoryButton() {
-      resetSearchState('switch category');
-      labelSelector.val('');
-    }
-
-    function switchTypeButton() {
-      resetSearchState('switch type');
-      labelSelector.val('');
-    }
-
-    function switchLabelSelector() {
-      resetSearchState('switch label');
-      labelSelector.val(labelSelector.val().replace(/ \(\d+\)$/, ''));
-    }
-
-    function setPlaceholder() {
-      var value;
-      if (currentType() === 'job' || currentType() === 'location' || currentType() === 'url' || currentType() === 'keyword') {
-        value = labelSelector.data('placeholder-' + currentType());
-      } else {
-        value = labelSelector.data('placeholder');
-      }
-      labelSelector.attr('placeholder', value);
-    }
-
-    $("input[name='category']").on('change', switchCategoryButton);
-    $("input[name='type']").on('change', switchTypeButton);
-    labelSelector.on('change', switchLabelSelector);
-
-    function currentCategory() {
-      return $("input[name='category']:checked").val();
-    }
-
-    function currentCategoryLabel() {
-      return $("input[name='category']:checked").data('label');
-    }
-
-    function currentType() {
-      return $("input[name='type']:checked").val();
-    }
-
-    function currentTypeLabel() {
-      return $("input[name='type']:checked").data('label');
-    }
-
-    function currentLabel() {
-      return labelSelector.val();
-    }
-
-    $('#show-details-check').on('change', function () {
-      if ($(this).prop('checked')) {
-        $('#search-response').find('.search-response-user-details').show();
-      } else {
-        $('#search-response').find('.search-response-user-details').hide();
-      }
-    });
-
-    function appendSearchResponse(users) {
-      if (!users || users.length === 0) {
-        if (lastUid) {
-          // Do nothing
-        } else {
-          resetSearchState('no results found');
-          $('#search-response').empty().html(i18n['no_results_found']).hide().fadeIn(500);
-        }
-      } else {
-        var container = $('<div/>', {style: 'display: none;'});
-        var template = $('#search-response-user-template').html();
-
-        users.forEach(function (user) {
-          if (user.description) {
-            user.description = user.description.replace('\n', '<br>').replace(/https?:\/\//g, '');
-            user.description = linkifyHtml(user.description, {defaultProtocol: 'https'});
-          }
-          user.index_number = currentIndexNumber++;
-          var rendered = $(Mustache.render(template, user));
-          rendered.find('img[data-src]').each(function () {
-            var img = $(this);
-            img.attr('src', img.attr('data-src'));
-          });
-          container.append(rendered);
-        })
-        if (!$('#show-details-check').prop('checked')) {
-          container.find('.search-response-user-details').hide();
-        }
-        $('#search-response').append(container)
-        container.fadeIn(500);
-        $('#search-response').append($('<div/>', {text: 'Loading'}).lazyload().one('appear', function () {
-          var elem = $(this);
-          search(function () {
-            elem.remove();
-          });
-        }));
-
-        lastUid = users[users.length - 1].uid;
-      }
-    }
-
-    function search(callback) {
-      var category = currentCategory();
-      var type = currentType();
-      var label = currentLabel();
-      var limit = 10;
-
-      if (category !== 'friends' && category !== 'followers' && category !== 'one_sided_friends' && category !== 'one_sided_followers' && category !== 'mutual_friends') {
-        console.warn('Invalid category', category);
-        resetSearchState('Invalid category');
-        $('#search-response').empty().text('Please specify correct [category]').hide().fadeIn(500);
-        return
-      }
-
-      if (type !== 'job' && type !== 'location' && type !== 'url' && type !== 'keyword') {
-        console.warn('Invalid type', type);
-        resetSearchState('Invalid type');
-        $('#search-response').empty().text('Please specify correct [type]').hide().fadeIn(500);
-        return
-      }
-
-      if (!label || label.length === 0) {
-        console.warn('Invalid label', label);
-        resetSearchState('Invalid label');
-        $('#search-response').empty().text(i18n['specify_correct_label']).hide().fadeIn(500);
-        labelSelector.addClass('is-invalid');
-        return
-      }
-
-      $('.search-response-title').show()
-        .find('.category').text(currentCategoryLabel()).end()
-        .find('.type').text(currentTypeLabel()).end()
-        .find('.label').text(label);
-
-      var url = '<%= raw api_searches_path %>';
-      var params = {category: category, type: type, label: label, limit: limit, last_uid: lastUid}
-      console.log('request', params);
-
-      $.get(url, params).done(function (res) {
-        console.log('response', res);
-        appendSearchResponse(res.users);
-        if (callback) {
-          callback();
-        }
-      });
-    }
-
-    $("input[name='category']").on('click', fetchLabelOptions);
-    $("input[name='type']").on('click', fetchLabelOptions);
-
-    $('#search-submit').on('click', function () {
-      search();
-      return false;
-    });
-
-    labelSelector.on('keypress', function (e) {
-      if (e.keyCode === 13) { // Enter key
-        search();
-      }
-    });
-
-    function setOptions(options) {
-      console.log('datalist', options)
-      $('#search-label-options').empty();
-      options.forEach(function (option) {
-        var tag = $('<option/>', {value: option.label, text: option.label});
-        $('#search-label-options').append(tag);
-      });
-
-      setPlaceholder();
-      labelSelector.addClass('is-valid');
-      setTimeout(function () {
-        labelSelector.removeClass('is-valid');
-      }, 1000)
-    }
-
-    function setQuickSelect(options) {
-      $('#quick-select a').text('');
-      options.forEach(function (option, i) {
-        var btn = $('#quick-select a:eq(' + i + ')');
-        btn.text(option.label).on('click', function () {
-          resetSearchState('label selected');
-          labelSelector.val(option.value);
-          return false;
-        });
-      });
-    }
-
-    function fetchLabelOptions() {
-      var url = '<%= raw api_label_options_path %>';
-      var category = currentCategory();
-      var type = currentType();
-
-      $.get(url, {category: category, type: type}).done(function (res) {
-        setOptions(res.options);
-        setQuickSelect(res.quick_select);
-      });
-    }
-
-    fetchLabelOptions();
+    var form = new SearchForm('<%= raw api_searches_path %>', i18n);
+    var label = new SearchLabel('<%= raw api_label_options_path %>', form);
+    form.setSearchLabel(label);
+    label.fetchOptions();
 
     $('[data-toggle="tooltip"]').tooltip();
   });
